--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -1,1 +1,4 @@
-<p class="text-lg font-bold">header works!</p>
+<div>
+    <div class="flex items-center justify-between p-4 bg-gray-800 text-white">
+        <h1 class="text-xl font-bold">Nido</h1>
+</div>
