--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
@@ -1,47 +1,25 @@
-
-h2 {
-  margin: 0;
-  font-size: 16px;
+/* Quitar bordes de la tabla del calendario */
+.fc-theme-standard td,
+.fc-theme-standard th,
+.fc-theme-standard .fc-scrollgrid {
+  border: none !important;
 }
 
-ul {
-  margin: 0;
-  padding: 0 0 0 1.5em;
-}
-
-li {
-  margin: 1.5em 0;
+/* Cambiar el color y forma del dia de hoy */
+.fc .fc-daygrid-day.fc-day-today {
+  background-color: rgb(38, 161, 231); /* o var(--fc-today-bg-color) */
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
   padding: 0;
 }
 
-b { /* used for event dates/times */
-  margin-right: 3px;
-}
-
-.demo-app {
-  display: flex;
-  min-height: 100%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 14px;
-}
-
-.demo-app-sidebar {
-  width: 300px;
-  line-height: 1.5;
-  background: #eaf9ff;
-  border-right: 1px solid #d3e2e8;
-}
-
-.demo-app-sidebar-section {
-  padding: 2em;
-}
-
-.demo-app-main {
-  flex-grow: 1;
-  padding: 3em;
-}
-
-.fc { /* the calendar root */
-  max-width: 1100px;
-  margin: 0 auto;
+/* Centrar el texto del dia */
+ .fc-daygrid-day-top {
+  justify-content: center;
 }
