--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<div
+  class="fixed bottom-0 left-0 w-full bg-white shadow-md flex justify-around items-center py-6 rounded-t-2xl"
+>
+  <button class="flex flex-col items-center text-gray-500 hover:text-black">
+    <i class="pi pi-user text-xl"></i>
+  </button>
+  <button class="flex flex-col items-center text-gray-500 hover:text-black">
+    <i class="pi pi-calendar text-xl"></i>
+  </button>
+  <button class="flex flex-col items-center text-gray-500 hover:text-black">
+    <i class="pi pi-sliders-h text-xl"></i>
+  </button>
+</div>
