--- a/frontend/src/app/public/welcome-page/welcome-page.component.html
+++ b/frontend/src/app/public/welcome-page/welcome-page.component.html
@@ -11,7 +11,7 @@
       Organiza rutinas, coordina actividades y comparte momentos clave con tu
       familia.
     </p>
-    <button class="continue-button" (click)="continueToLanding()">
+    <button class="continue-button" (click)="continueToLogin()">
       Continuar
     </button>
   </div>
