--- a/frontend/src/app/pages/auth/login-page/login-page.component.html
+++ b/frontend/src/app/pages/auth/login-page/login-page.component.html
@@ -30,7 +30,9 @@
         />
       </div>
 
-      <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+      @if (errorMessage) {
+      <p class="error-message">{{ errorMessage }}</p>
+      }
 
       <button type="submit" class="login-button">Iniciar Sesión</button>
     </form>
