--- a/frontend/src/app/pages/auth/register-page/register-page.component.css
+++ b/frontend/src/app/pages/auth/register-page/register-page.component.css
@@ -1,14 +1,3 @@
-/* Colores de la App (referencia)
-   Fondo de la app: #C8E6F0
-   Primario: #9ED2C5 (para el contenedor del formulario)
-   Secundario: #FBF8F0
-   Acento Amarillo: #FFD700
-   Acento Naranja: #FF7F50
-   Texto Oscuro: #3A3A3A
-   Texto Claro: #6B6B6B
-   Blanco: #FFFFFF
-*/
-
 @keyframes slideInFadeIn {
   from {
     opacity: 0;
@@ -93,8 +82,8 @@
 }
 
 .camera-icon {
-  font-size: 2em;
-  color: #6b6b6b;
+  width: 60px;
+  height: 60px;
 }
 
 .profile-tip {
@@ -131,6 +120,8 @@
   color: #3a3a3a;
   background-color: #ffffff;
   outline: none;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .input-group input::placeholder {
@@ -153,20 +144,19 @@
   padding: 15px 30px;
   font-size: 1.2em;
   font-weight: bold;
-  color: #3a3a3a;
-  background-color: #ffd700;
+  color: white;
+  background-color: #ff7f50;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-top: 15px;
-
   transition: background-color 1s ease, color 1s ease, transform 0.2s ease;
 }
 
 .submit-button:hover {
-  background-color: #ff7f50;
-  color: #ffffff;
+  background-color: #ffd700;
+  color: #3a3a3a;
   transform: translateY(-2px);
 }
 
