--- a/frontend/src/app/public/welcome-page/welcome-page.component.html
+++ b/frontend/src/app/public/welcome-page/welcome-page.component.html
@@ -11,8 +11,9 @@
       Organiza rutinas, coordina actividades y comparte momentos clave con tu
       familia.
     </p>
-    <button class="continue-button" (click)="continueToLogin()">
+    <!-- <button class="continue-button" (click)="continueToLogin()">
       Continuar
-    </button>
+    </button> -->
+    <p-button label="Iniciar Sesión" [raised]="true" (onClick)="continueToLogin()" />
   </div>
 </div>
