--- a/frontend/src/app/pages/profiles/settings/settings-profile.component.html
+++ b/frontend/src/app/pages/profiles/settings/settings-profile.component.html
@@ -7,7 +7,7 @@
       >
         <i class="pi pi-arrow-left text-gray-700 text-lg"></i>
       </button>
-      <h1 class="text-lg font-semibold text-gray-900">Settings</h1>
+      <h1 class="text-lg font-semibold text-gray-900">Ajustes</h1>
       <div class="w-9"></div>
     </div>
   </div>
@@ -86,7 +86,7 @@
         (click)="logout()"
       >
         <i class="pi pi-sign-out mr-3 text-sm"></i>
-        Log Out
+        Cerrar sesión
       </button>
     </div>
   </div>
