--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
@@ -29,8 +29,8 @@
 .fc .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
   background-color: rgb(38, 161, 231);
   color: white;
-  border-radius: 50%;
-  width: 30px;
+/*   border-radius: 50%;
+ */  width: 30px;
   height: 30px;
   display: flex;
   justify-content: center;
@@ -49,10 +49,11 @@
   top: 75%; /* Puedes ajustar esto si el punto está muy bajo o alto */
   left: 50%;
   transform: translateX(-50%);
-  width: 6px;
-  height: 6px;
+  width: 4px;
+  height: 4px;
   background-color: red;
   border-radius: 50%;
+  z-index: 9999;
 }
 
 /* Ocultar texto de evento en el calendario */
